--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -11,9 +11,14 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- Device specific doze package -->
     <string name="config_customDozePackage">org.lineageos.settings/org.lineageos.settings.doze.DozeSettingsActivity</string>
+
+      <!-- Battery Health -->
+      <string name="config_batDesCap">/sys/class/power_supply/bms/charge_full_design</string>
+      <string name="config_batCurCap">/sys/class/power_supply/bms/charge_full</string>
+      <string name="config_batChargeCycle">/sys/class/power_supply/bms/cycle_count</string>
 
 </resources>
